<resources>
    <string name="app_name">MenuDemo</string>
    <string name="action_settings">Settings</string>
    <string name="action_copy">Copy</string>
    <string name="action_paste">Paste</string>
    <string name="action_courses">Courses</string>
    <string name="action_android">Android</string>
    <string name="action_arduino">Arduino</string>
    <string name="action_java">Java</string>
</resources>
